--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-material-dashboard",
-  "author": "DeviasIO",
-  "email": "contact@devias.io",
+  "name": "meter-image-capturing-react",
+  "author": "Alexander Powell",
+  "email": "ajpowell@email.wm.edu",
   "licence": "MIT",
   "version": "0.3.0",
   "private": false,
