--- a/package.json
+++ b/package.json
@@ -27,34 +27,37 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^4.2.1",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.2.1",
+    "@google-cloud/storage": "^5.1.2",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "chart.js": "^2.8.0",
-    "clsx": "^1.0.4",
-    "firebase": "^7.14.3",
+    "clsx": "^1.1.1",
+    "firebase": "^7.17.1",
     "history": "^4.9.0",
-    "material-table": "^1.57.2",
-    "moment": "^2.24.0",
+    "material-table": "^1.68.1",
+    "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.7.6",
+    "react-csv-reader": "^3.1.0",
     "react-dom": "^16.8.6",
     "react-perfect-scrollbar": "^1.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.0.1",
     "recompose": "^0.30.0",
+    "tubular-react": "^4.2.5",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
     "prettier": "^1.17.1",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
-    "typescript": "^3.5.1"
+    "typescript": "^3.9.7"
   }
 }
