--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@google-cloud/storage": "^5.1.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
+    "@thumbtack/thumbprint-react": "^14.0.0",
     "chart.js": "^2.8.0",
     "clsx": "^1.1.1",
+    "file-saver": "^2.0.2",
     "firebase": "^7.17.1",
     "history": "^4.9.0",
     "material-table": "^1.68.0",
@@ -47,6 +50,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "recompose": "^0.30.0",
+    "serve": "^11.3.2",
     "tubular-react": "^4.2.5",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
