--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-chartjs-2": "^2.10.0",
     "react-csv-reader": "^3.1.1",
     "react-dom": "^16.8.6",
+    "react-global-configuration": "^1.4.0",
     "react-perfect-scrollbar": "^1.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
