--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     ]
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@google-cloud/storage": "^5.1.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "@thumbtack/thumbprint-react": "^14.0.0",
     "chart.js": "^2.8.0",
     "clsx": "^1.1.1",
+    "date-fns": "^2.16.1",
     "file-saver": "^2.0.2",
     "firebase": "^7.17.1",
     "history": "^4.9.0",
